--- a/souceCode/RSS/src/main/resources/templates/console/menu.html
+++ b/souceCode/RSS/src/main/resources/templates/console/menu.html
@@ -16,6 +16,12 @@
                     <li class="primaryMenu">
                         <a><i class="fa fa-sitemap"></i> 活动管理<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse" aria-expanded="false" style="height: 0px;">
+
+                            <!--首页-->
+                            <li class="secondaryMenu">
+                                <a href="/admin/index">首页</a>
+                            </li>
+
                             <!--推荐菜品-->
                             <li class="secondaryMenu">
                                 <a href="/admin/activityManagement">活动管理</a>
