--- a/souceCode/RSS/src/main/resources/templates/console/peopleManagement/cookerManagement.html
+++ b/souceCode/RSS/src/main/resources/templates/console/peopleManagement/cookerManagement.html
@@ -41,6 +41,8 @@
     <script src="/javascript/bootstrap-table.min.js"></script>
     <script src="/javascript/bootstrap-table-zh-CN.js"></script>
 
+    <script src="/javascript/custom-table-formatter/formatter.js"></script>
+
     <style>
         .fixed-table-body {
             overflow-x: auto;
@@ -169,7 +171,7 @@
                                     <thead>
                                     <tr>
                                         <th data-field="id" class="W30" data-formatter="_formatte_id"><input id="doAllCheckBtn" type="checkbox" onclick="doAllCheck(this)"></th>
-                                        <th data-field="userID"  class="W100" style="border:none;">微信ID</th>
+                                        <th data-field="openID"  class="W100" style="border:none;" data-formatter="_formatte_to_detail">微信ID</th>
                                         <th data-field="loginID" class="W100" style="border:none;">登陆码</th>
                                         <th data-field="name"  class="W100" style="border:none;">名称</th>
                                         <th data-field="phoneNumber"  class="W100" style="border:none;">电话号码</th>
@@ -228,7 +230,7 @@
                                     <div class="col-sm-7">
                                         <input type="text" class="form-control" id="userId" name="userId"
                                                data-toggle="tooltip" data-placement="top" maxlength="30"
-                                               required="required" disabled/>
+                                               required="required" readonly/>
                                     </div>
 
                                     <div class="col-sm-1"></div>
@@ -533,7 +535,6 @@
             $.get("/admin/cooker/get/" + id[0], null, function (res, status) {
                 $("#dialog-update").find("input[id='id']").val(res.cooker.id);
 
-                $("#dialog-update").find("input[id='userID']").val(res.cooker.userId);
                 $("#dialog-update").find("input[id='name']").val(res.cooker.name);
                 $("#dialog-update").find("input[id='loginID']").val(res.cooker.loginID);
                 $("#dialog-update").find("input[id='phoneNumber']").val(res.cooker.phoneNumber);
@@ -742,37 +743,19 @@
     })
 
     function doAllCheck(e){
-        var list = $("input[name='visitor_id']");
+        var list = $("input[name='table_id']");
 
         for(i in list){
             list[i].checked = !list[i].checked;
         }
     }
 
-    function _formatte_id(value, row, index) {
-        if(index == 0){
-            contactsNameMap = new Map();
-        }
-
-        contactsNameMap.set(value,row.name);
-
-        return '<input name="table_id" type="checkbox" value="' + value + '" />';
-    }
-
-    function _formatte_select_enable(value, row, index) {
-        return $.trim(value) ==$.trim('1') ? "是":"否" ;
-    }
-
     function _formatte_select_role(value, row, index) {
         return $.trim(value) ==$.trim('1') ? "是":"否" ;
     }
 
-    function _formatte_time(value, row, index) {
-        if(value==undefined){
-            return '-'
-        }
-
-        return getFormattedTime(value);
+    function _formatte_to_detail(value, row, index){
+        return '<a href="/admin/cookerDetail?cookerID=' + row.id +'">'+value+'</a>';
     }
 
     //注销
