--- a/souceCode/RSS_Front/pages/mine/order_record/order_record.wxml
+++ b/souceCode/RSS_Front/pages/mine/order_record/order_record.wxml
@@ -2,9 +2,10 @@
 
 <!--index.wxml-->
 <view class="container_" style='padding: 0;'>
-
   <scroll-view class='container_scroll'>
-      <block wx:for="{{orderList}}" wx:for-item="blockItem"> 
+    <view style='text-align:center;margin-top:10px' wx:if="orderList.length == 0" > 没有订单记录 </view>
+
+    <block wx:for="{{orderList}}" wx:for-item="blockItem"> 
         <template is="item_mine_orderRecord" data="{{...blockItem, ...{screenWidth : screenWidth} }}" />
       </block>
   </scroll-view>
