--- a/souceCode/RSS/src/main/resources/templates/console/peopleManagement/waiterDetail.html
+++ b/souceCode/RSS/src/main/resources/templates/console/peopleManagement/waiterDetail.html
@@ -197,7 +197,7 @@
                             <i class="pull-left fa fa-dollar icon-rounded"></i>
                             <div class="stats">
                                 <h5><strong>总服务次数</strong></h5>
-                                <span>Total Revenue</span>
+                                <span id="totalServiceTimes">0</span>
                             </div>
                         </div>
                     </div>
@@ -207,7 +207,7 @@
                             <i class="pull-left fa fa-dollar icon-rounded"></i>
                             <div class="stats">
                                 <h5><strong>本月服务次数</strong></h5>
-                                <span>0</span>
+                                <span id="monthServiceTimes">0</span>
                             </div>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                             <i class="pull-left fa fa-dollar icon-rounded"></i>
                             <div class="stats">
                                 <h5><strong>本星期服务次数</strong></h5>
-                                <span>0</span>
+                                <span id="weekServiceTimes">0</span>
                             </div>
                         </div>
                     </div>
@@ -227,7 +227,7 @@
                             <i class="pull-left fa fa-dollar icon-rounded"></i>
                             <div class="stats">
                                 <h5><strong>今日服务次数</strong></h5>
-                                <span>0</span>
+                                <span id="dayServiceTimes">0</span>
                             </div>
                         </div>
                     </div>
@@ -345,258 +345,6 @@
 
 
     <!--弹出框-->
-
-    <!--添加，修改折扣弹出框-->
-    <div id="dialog-discount-update" class="modal fade" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title">折扣管理 | <span id="dialog-discount-update-title"></span></h4>
-                </div>
-
-                <div class="modal-body">
-                    <form role="form" class="form-horizontal add-new form-uploadfiles"
-                          enctype="multipart/form-data"
-                          method="POST">
-                        <input type="text" style="display:none;" id="id_discount" name="id_discount"/>
-                        <input type="text" style="display:none;" id="createTime_discount" name="id"/>
-
-                        <div class="row">
-                            <div class="form-group">
-                                <label for="type_discount" class="col-sm-4 control-label">折扣类型</label>
-                                <div class="col-sm-7">
-                                    <select class="form-control" id="type_discount" name="type_discount">
-                                        <option class="discount_option" value="0"> 折扣 </option>
-                                        <option class="discount_option" value="1"> 满减 </option>
-                                    </select>
-                                </div>
-
-                                <div class="col-sm-1"></div>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="moneyLimit_discount" class="col-sm-4 control-label">条件金额</label>
-                                <div class="col-sm-7">
-                                    <input type="text" class="form-control" id="moneyLimit_discount" name="moneyLimit_discount"
-                                           data-toggle="tooltip" data-placement="top" maxlength="30"
-                                           required="required" readonly/>
-                                </div>
-
-                                <div class="col-sm-1"></div>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="discount" class="col-sm-4 control-label">折扣</label>
-                                <div class="col-sm-7">
-                                    <input type="text" class="form-control" id="discount" name="discount"
-                                           data-toggle="tooltip" data-placement="top" maxlength="30"
-                                           required="required"/>
-                                </div>
-
-                                <div class="col-sm-1"></div>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="startTime_discount" class="col-sm-4 control-label">生效时间</label>
-                                <div class="col-sm-7">
-                                    <input type="text" class="form-control" id="startTime_discount" name="startTime"
-                                           data-toggle="tooltip" data-placement="top" maxlength="30"
-                                           required="required"/>
-                                </div>
-
-                                <div class="col-sm-1"></div>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="endTime_discount" class="col-sm-4 control-label">失效时间</label>
-                                <div class="col-sm-7">
-                                    <input type="text" class="form-control" id="endTime_discount" name="endTime"
-                                           data-toggle="tooltip" data-placement="top" maxlength="30"
-                                           required="required"/>
-                                </div>
-
-                                <div class="col-sm-1"></div>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="enable_discount" class="col-sm-4 control-label">是否启用</label>
-                                <div class="col-sm-7">
-                                    <select class="form-control" id="enable_discount" name="enable_discount">
-                                        <option value="1"> 是 </option>
-                                        <option value="0"> 否 </option>
-                                    </select>
-                                </div>
-
-                                <div class="col-sm-1"></div>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <div class="col-sm-offset-3 col-sm-9" style="text-align: right;padding-top: 20px;">
-                                <button type="button" class="btn btn-primary add-new-discount">保存</button>
-                                <button type="button" class="btn btn-default add-new-close" data-dismiss="modal">取消</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-
-    <!--添加推荐弹出框-->
-    <div id="dialog-recommend-add" class="modal fade" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title">推荐管理 | <span id="dialog-recommend-add-title"></span></h4>
-                </div>
-
-                <div class="modal-body">
-                    <form role="form" class="form-horizontal add-new form-uploadfiles"
-                          enctype="multipart/form-data"
-                          method="POST">
-                        <input type="text" style="display:none;" id="id_recommend" name="id"/>
-
-                        <div class="row">
-                            <div class="form-group">
-                                <div class="col-sm-1"></div>
-
-                                <div class="col-sm-10">
-                                    <label for="type_recommend" class="col-sm-5 control-label">展示类型</label>
-                                    <div class="col-sm-6">
-                                        <select class="form-control" id="type_recommend" name="type_recommend">
-                                            <option value="0"> 轮播 </option>
-                                            <option value="1"> 列表 </option>
-                                        </select>
-                                    </div>
-                                </div>
-
-                                <div class="col-sm-1"></div>
-                            </div>
-
-                            <div style="width: 100%;">
-                                <div class="col-sm-1"></div>
-
-                                <div class="col-sm-10">
-                                    <div class="table-responsive">
-                                        <table id="_table_recommend_food" class="table table-striped table-bordered table-hover">
-                                            <thead>
-                                            <tr>
-                                                <th data-field="id" class="W30" data-formatter="_formatte_id_recommend_dialog"><input id="id_recommend_food" name="id_recommend_food" type="checkbox" onclick="doAllCheck('id_recommend_food')"></th>
-                                                <th data-field="picUrl" class="W100" data-formatter="_formatte_image">图像</th>
-                                                <th data-field="name" class="W100">名称</th>
-                                                <th data-field="menuName" class="W100">一级菜单</th>
-                                            </tr>
-                                            </thead>
-
-                                        </table>
-                                    </div>
-                                </div>
-
-                                <div class="col-sm-1"></div>
-                            </div>
-
-
-                        </div>
-
-                        <div class="form-group">
-                            <div class="col-sm-offset-3 col-sm-9" style="text-align: right;padding-top: 20px;">
-                                <button type="button" class="btn btn-primary add-new-recommend">保存</button>
-                                <button type="button" class="btn btn-default add-new-close" data-dismiss="modal">取消</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-
-    <!--修改推荐弹出框-->
-    <div id="dialog-recommend-update" class="modal fade" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title">推荐管理 | <span >修改</span></h4>
-                </div>
-
-                <div class="modal-body">
-                    <form role="form" class="form-horizontal add-new form-uploadfiles"
-                          enctype="multipart/form-data"
-                          method="POST">
-                        <input type="text" style="display:none;" id="id_recommend_upate" name="id"/>
-                        <input type="text" style="display:none;" id="createTime_recommend"/>
-
-                        <div class="row">
-                            <div class="form-group">
-                                <div class="col-sm-1"></div>
-
-                                <div class="col-sm-5">
-                                    <label for="type_recommend" class="col-sm-5 control-label">展示类型</label>
-                                    <div class="col-sm-6">
-                                        <select class="form-control" id="type_recommend_update" name="type_recommend">
-                                            <option value="0"> 轮播 </option>
-                                            <option value="1"> 列表 </option>
-                                        </select>
-                                    </div>
-                                </div>
-
-                                <div class="col-sm-5">
-                                    <label for="type_recommend" class="col-sm-5 control-label">是否启用</label>
-                                    <div class="col-sm-6">
-                                        <select class="form-control" id="enable_recommend_update" name="type_recommend">
-                                            <option value="0"> 否 </option>
-                                            <option value="1"> 是 </option>
-                                        </select>
-                                    </div>
-                                </div>
-
-                                <div class="col-sm-1"></div>
-                            </div>
-
-                            <div style="width: 100%;">
-                                <div class="col-sm-1"></div>
-
-                                <div class="col-sm-10">
-                                    <div class="table-responsive">
-                                        <table id="_table_recommend_food_update" class="table table-striped table-bordered table-hover">
-                                            <thead>
-                                            <tr>
-                                                <th data-field="id" class="W30" data-formatter="_formatte_id_recommend_dialog_update"><input id="id_recommend_food_update" type="checkbox" ></th>
-                                                <th data-field="picUrl" class="W100" data-formatter="_formatte_image">图像</th>
-                                                <th data-field="name" class="W100">名称</th>
-                                                <th data-field="menuName" class="W100">一级菜单</th>
-                                            </tr>
-                                            </thead>
-
-                                        </table>
-                                    </div>
-                                </div>
-
-                                <div class="col-sm-1"></div>
-                            </div>
-
-
-                        </div>
-
-                        <div class="form-group">
-                            <div class="col-sm-offset-3 col-sm-9" style="text-align: right;padding-top: 20px;">
-                                <button type="button" class="btn btn-primary update-new-recommend">保存</button>
-                                <button type="button" class="btn btn-default update-new-close" data-dismiss="modal">取消</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-
-
     <!--提示弹出框-->
     <div id="dialog-return" class="modal fade" style="z-index:99999" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-sm" role="document">
@@ -611,44 +359,11 @@
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
 
-    <!--折扣删除确认框-->
-    <div id="dialog-discount-delete" class="modal fade" tabindex="-1" role="dialog">
-        <div class="modal-dialog modal-sm" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="mySmallModalLabel0_discount">提示</h4>
-                </div>
-                <div class="modal-body"></div>
-                <div class="modal-footer modal-footer-delete-confirm">
-                    <button type="button" class="btn btn-danger btn-discount-delete-confirm" data-dismiss="modal">确认</button>
-                    <button type="button" class="btn btn-default btn-delete-cancel" data-dismiss="modal">取消</button>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-
-    <!--推荐删除确认框-->
-    <div id="dialog-recommend-delete" class="modal fade" tabindex="-1" role="dialog">
-        <div class="modal-dialog modal-sm" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="mySmallModalLabel0_recommend">提示</h4>
-                </div>
-                <div class="modal-body"></div>
-                <div class="modal-footer modal-footer-delete-confirm">
-                    <button type="button" class="btn btn-danger btn-recommend-delete-confirm" data-dismiss="modal">确认</button>
-                    <button type="button" class="btn btn-default btn-delete-cancel" data-dismiss="modal">取消</button>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-
-
 </div>
 
 <script>
+    var waiterID = getUrlParam("waiterID");
+
     var contactsNameMap = new Map();
     var IDMapForRecommendAdd = new Map();
     var foodID_recommend_update;
@@ -726,7 +441,51 @@
             forceParse: 0
         });
 
-        displayLineChart( );
+        var toDayTime = getToDayDateTime();
+
+        $('#datepicker_start').val(  toDayTime.split(" ")[0]  );
+
+        $.ajax({
+            url: "/admin/waiter/getWaiterServiceInfo",
+            type: "post",
+            processData: false,
+            data:{
+                "waiterID" : parseInt(waiterID)
+            },
+            contentType: false,
+            success: function (res) {
+                switch (res.status) {
+                    case "SUCCEED" :
+                        $("#totalServiceTimes").html(res.totalServiceTimes);
+                        $("#monthServiceTimes").html(res.monthServiceTimes);
+                        $("#weekServiceTimes").html(res.weekServiceTimes);
+                        $("#dayServiceTimes").html(res.dayServiceTimes);
+
+                        data_chart.datasets[0].data = orderNumber;
+
+                        //createPopularFoods(popularFood);
+
+                        displayLineChart( adjustItemHeight );
+                    case "FAILED" :
+                        $("#dialog-return").find(".modal-body").html(message);
+
+                        if(r.message != undefined){
+                            $("#dialog-return").find(".modal-body").append("\n原因:"+r.message);
+                        }
+
+                        $("#dialog-return").modal("show");
+
+                        $(".btn.btn-default.add-new-close").click();
+
+                        break
+                }
+            },
+            error: function (r) {
+                $("#dialog-return").find(".modal-body").html("网络错误");
+                $("#dialog-return").modal("show");
+            }
+
+        });
 
     });
 
