后端 完成管理员查看waiter信息功能

--- a/souceCode/RSS/src/main/resources/templates/console/peopleManagement/waiterDetail.html
+++ b/souceCode/RSS/src/main/resources/templates/console/peopleManagement/waiterDetail.html
@@ -447,10 +447,10 @@
 
         $.ajax({
             url: "/admin/waiter/getWaiterServiceInfo",
-            type: "post",
+            type: "POST",
             processData: false,
             data:{
-                "waiterID" : parseInt(waiterID)
+                "waiterID" : waiterID
             },
             contentType: false,
             success: function (res) {
