大致完成点餐流程

--- a/souceCode/RSS/src/main/resources/templates/console/peopleManagement/waiterManagement.html
+++ b/souceCode/RSS/src/main/resources/templates/console/peopleManagement/waiterManagement.html
@@ -697,6 +697,10 @@
     }
 
     function _formatte_to_detail(value, row, index){
+        if(value == undefined){
+            return "-";
+        }
+
         return '<a href="/admin/waiterDetail?waiterID=' + row.id +'">'+value+'</a>';
     }
 
