后端 完成厨师，服务员信息查看功能

--- a/souceCode/RSS/src/main/resources/templates/console/index.html
+++ b/souceCode/RSS/src/main/resources/templates/console/index.html
@@ -621,6 +621,7 @@
                         lineChart.destroy();
 
                         displayLineChart( adjustPositionOfLineChart );
+                        break;
 
                     case "FAILED" :
                         $("#dialog-return").find(".modal-body").html(message);
