--- a/souceCode/RSS/src/main/resources/templates/login.html
+++ b/souceCode/RSS/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
                 <form role="form" th:action="@{/login}" method="POST">
                     <fieldset>
                         <div class="form-group">
-                            <input class="form-control" placeholder="用户名或邮箱" name="username" type="text" required="required" />
+                            <input class="form-control" placeholder="用户名" name="username" type="text" required="required" />
                         </div>
                         <div class="form-group">
                             <input class="form-control" placeholder="密码" name="password" type="password" required="required" />
