后端 完成了注销功能

--- a/souceCode/RSS/src/main/resources/templates/console/peopleManagement/cookerDetail.html
+++ b/souceCode/RSS/src/main/resources/templates/console/peopleManagement/cookerDetail.html
@@ -584,7 +584,7 @@
 
 
     //注销
-    $(".btn.btn-danger.btn-logout").click(function () {
+    $("#logout").click(function () {
         window.location.href = "/logout";
     })
 </script>
