--- a/souceCode/RSS/src/main/resources/templates/console/peopleManagement/userDetail.html
+++ b/souceCode/RSS/src/main/resources/templates/console/peopleManagement/userDetail.html
@@ -412,7 +412,7 @@
     }
 
     //注销
-    $(".btn.btn-danger.btn-logout").click(function () {
+    $("#logout").click(function () {
         window.location.href = "/logout";
     })
 </script>
